ChangeLog for pommed
--------------------

version 1.13:
	- pommed: add an option to disable the beep on volume change.
	- pommed: add the videoSwitch DBus notification.
	- wmpomme: add video switch support.

version 1.12:
	- pommed: do not expect at least 3 evdevs at startup; there are
	only 2 on the MacBook, and possibly only 1 on the pmac machines.

version 1.11:
	- pommed: beep on volume change, now that we have the audio code
	in pommed itself.
	- gpomme: remove audio-related code.
	- pommed: partial support (ie. no LCD backlight yet) for the
	MacBook3,1 (MacBook Core2 Duo Santa Rosa, November 2007).
	- pommed: rework the event management. Use epoll() for event
	polling instead of poll(). Use inotify to watch new event devices
	appear in /dev/input. This effectively fixes our disappearing
	event devices issues after suspend. YAY.
	- pommed: add support for the external Apple USB keyboards, white
	& alu. If you have such a keyboard with another USB ID, please
	contact me. Patch from Carmine 'earcar' Paolino <earcar@gmail.com>.
	- pommed: add secondary locations for the uinput device
	node. Heads up & patch from Carmine 'earcar' Paolino.

version 1.10:
	- pommed: add a beeper feature as a substitute to the missing PC
	Speaker. The feature is disabled by default, as not all machines
	need it and not everybody wants it ;)

version 1.9:
	- pommed: add an idle timer to automatically switch off the
	keyboard backlight. Suggested by Javier Marcet.
	- pommed: turn has_kbd_backlight() into an inline function.
	- pommed: kill code duplication in the main loop.

version 1.8:
	- pommed: probe for the applesmc sysfs path in the ambient light
	handling code. The path has changed in Linux 2.6.22.
	- pommed: added automatic LCD backlight dimming when switching
	from AC to battery power (and vice-versa).
	- pommed: send out DBus notification when the automatic LCD
	backlight dimming kicks in (similar to the automatic keyboard
	backlight notification).